--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,4 +2,14 @@ site_name: Xbox One Research Wiki
 nav:
     - Home: index.md
     - FAQ: faq.md
-theme: material
+theme:
+  name: material
+  palette:
+    - scheme: default
+      toggle:
+        icon: material/toggle-switch-off-outline
+        name: Switch to dark mode
+    - scheme: slate
+      toggle:
+        icon: material/toggle-switch
+        name: Switch to light mode
