--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,9 +11,11 @@ jobs:
     steps:
       - name: Checkout master
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
       - name: Install dependencies
-        run: pip install -U mkdocs-material
+        run: pip install -U -r requirements.txt
 
       - name: Build and check for errors
         run: mkdocs build --strict
