mkdocs: Warn when page is not linked-to in navigation

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,7 +15,7 @@ theme:
 
 validation:
   nav:
-    omitted_files: info
+    omitted_files: warn
     not_found: warn
     absolute_links: warn
   links:
