ci: Split into two workflows, build and deploy

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,33 +1,18 @@
-name: Deploy Website
+name: Build site
 on: [push, pull_request]
 
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-concurrency:
-  group: "pages"
-  cancel-in-progress: true
-
 jobs:
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - uses: actions/setup-python@v2
+      - name: Install python
+        uses: actions/setup-python@v2
         with:
           python-version: 3.x
-      - run: pip install -U -r requirements.txt
-      - run: mkdocs build --strict
-      - uses: actions/upload-pages-artifact@v1
-        with:
-          path: 'site'
-      - id: deployment
-        if: github.ref_name == 'master'
-        uses: actions/deploy-pages@v1
+      - name: Install deps
+        run: pip install -U -r requirements.txt
+      - name: Build
+        run: mkdocs build --strict
