--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -42,3 +42,6 @@ plugins:
       enabled: !ENV [CI, false]
       strict: false
       enable_creation_date: true
+
+markdown_extensions:
+  - pymdownx.magiclink
