Document the Game OS VM launch process from within System OS

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -53,4 +53,8 @@ markdown_extensions:
       anchor_linenums: true
       use_pygments: true
       pygments_lang_class: true
-  - pymdownx.superfences 
+  - pymdownx.superfences:
+      custom_fences:
+        - name: mermaid
+          class: mermaid
+          format: !!python/name:pymdownx.superfences.fence_code_format
