--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -43,7 +43,7 @@ plugins:
       enabled_on_serve: True
       history_limit: -1
       timestamp_format: "%Y-%m-%d %H:%M"
-      changelog_features:
+      table_features:
         - "page_link_rendered"
         - "timestamp"
         - "author"
